public/less/app/Navbar.less
@import '../variables.less';

.navbar {
	z-index: 2;
	background-color: @bevy-green;
	border-color: rgba(0,0,0,0);
	border-radius: 0px;
	height: 68px;
	box-shadow: 0px 1px 4px rgba(0,0,0,.3);

	.navbar-header.pull-left{
		margin-left: 10px;
		.profile-btn{
			float: left;
			margin: 14px 10px;
			border-radius: 50px;
			width: 40px;
			height: 40px;
		}
		.navbar-brand.navbar-brand-text {
			float: left;
			font-size: 1.2em;
			padding: 0px;
			margin: 24px 10px;
			height: 20px;
			color: #FFF;
			background-color: rgba(0,0,0,0);
			border: none;

			&:focus {
				color: #e6e6e6;
			}

			&:active {
				color: rgba(255,255,255,.7);
				box-shadow: none;
			}
		}
	}
	.navbar-form {
		padding-top: 0px;
		padding-right: 30px;
		border-top: none;
		border-bottom: none;
		box-shadow: none;

		.form-group {
			display: inline-block;
		}
		//SEARCH
		.search-input{
			background-color: rgba(0,0,0,0);
			border-bottom: none;
			border-left: 0px;
			border-top: 0px;
			border-right: 0px;
			box-shadow: none;
			border-radius: 0px;
			color: #fff;
			padding-left: 4px;
			padding-bottom: 2px;
		}
		.search-icon {
			position:relative;
			color: #fff;
			right: 30px;
			top: 2px;
		}
		.glyphicon-search {
			color: white;
			font-size: 1em;
		}
		.mui-icon-button {
			padding: 5px;
		}
		.mui-text-field .mui-text-field-focus-underline {
			border-color: white;
		}
		.mui-text-field .mui-text-field-underline {
			border-top: 1px solid rgba(255,255,255,.2);
		}
		.mui-text-field .mui-text-field-input, .mui-text-field .mui-text-field-textarea {
			box-shadow: none!important;
			color: white;
		}
	}
}


@media (max-width: 767px) {
	.navbar-form .form-group {
		margin-bottom: 0px;
		display: inline-block;
	}
}
@media (max-width: 402px) {
	.navbar .navbar-form .search-input {
		width: 150px;
	}
}

